Fix navigation on mobile screen by overriding z-index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,6 +76,7 @@ header {
 
 .sidenav-overlay {
     opacity: 0 !important;
+    z-index: 1 !important;
 }
 
 nav {
